--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,4 @@
-{deps, [{hackney, ".*", {git, "git://github.com/benoitc/hackney.git", {tag, "1.6.0"}}},
-        {gpb, ".*", {git, "git://github.com/tomas-abrahamsson/gpb.git", {tag, "3.22.3"}}}]}.
+{deps, [{hackney, ".*", {git, "https://github.com/benoitc/hackney.git", {tag, "1.6.0"}}},
+        {gpb, ".*", {git, "https://github.com/tomas-abrahamsson/gpb.git", {tag, "3.22.3"}}}]}.
 
 {pre_hooks, [{compile, "./proto.sh 1.0.0"}]}.
