--- a/rebar.config
+++ b/rebar.config
@@ -1,13 +1,13 @@
-{deps, [{hackney, ".*", {git, "git://github.com/benoitc/hackney.git", {tag, "1.6.3"}}},
-        {gpb, ".*", {git, "git://github.com/tomas-abrahamsson/gpb.git", {tag, "3.26.5"}}}]}.
+{deps, [{hackney, ".*", {git, "https://github.com/benoitc/hackney.git", {tag, "1.6.3"}}},
+        {gpb, ".*", {git, "https://github.com/tomas-abrahamsson/gpb.git", {tag, "3.26.5"}}}]}.
 
 {pre_hooks, [%% Scheduler.
-             {compile, "$(pwd)/deps/gpb/bin/protoc-erl -I$(pwd)/proto "
+             {compile, "$(pwd)/../gpb/bin/protoc-erl -I$(pwd)/proto "
                        "-il -o-erl src -o-hrl include "
                        "-modprefix erl_mesos_ -modsuffix _proto "
                        "$(pwd)/proto/mesos/v1/scheduler/scheduler.proto"},
              %% Executor.
-             {compile, "$(pwd)/deps/gpb/bin/protoc-erl -I$(pwd)/proto "
+             {compile, "$(pwd)/../gpb/bin/protoc-erl -I$(pwd)/proto "
                        "-il -o-erl src -o-hrl include "
                        "-modprefix erl_mesos_ -modsuffix _proto "
                        "$(pwd)/proto/mesos/v1/executor/executor.proto"}
